@@ -1022,6 +1022,14 @@ string field, which will be used in 1.0 to represesnt builder task
 options for schema kits that support more than one transaction-time
 builder task.
 
+72. [CLIENT, SCHEMA EDITOR] Fixed tree's pop-up menus on Linux
+
+The GUI tree component was still using old-style AWT pop-up menus,
+which wasn't working properly on Linux using Java 1.3.  Since almost
+everything in the Ganymede client and admin console are based on Swing,
+switching the pop-ups to Swing should keep things consistent and
+working on various platforms.
+
 -------------------- Changes from 0.99.8 to 0.99.9 -------------------
 
 RELEASE DATE: January 13, 2000
